Alignment issue fixed

--- a/app/css/themes/dark/theme.css
+++ b/app/css/themes/dark/theme.css
@@ -257,7 +257,7 @@
     width: 76px;
     height: 76px;
     clip: rect(0px, 76px, 76px, 38px);
-    left: 14px;
+    left: 15px;
     top: 24px;
 }
 
